# fabricaHackathon-backend

./: .env-example  .gitignore  README.md  pyproject.toml
config/: celery.py  settings.py  urls.py
hackathon/: admin.py  apps.py  models.py
hackathon/actions/: __init__.py  rankings.py  update_rankings.py
hackathon/filters/: __init__.py  ranking.py  student.py  team.py
hackathon/migrations/: 0001_initial.py  0002_alter_aluno_options_alter_avaliador_options_and_more.py  0002_alter_edition_involved_classes.py  0002_edition_file.py  0002_remove_team_status.py  0002_rename_avaliator_edition_avaliators_and_more.py  0002_rename_members_per_team_edition_max_members_and_more.py  0002_team_status.py  0003_alter_team_leader_alter_team_students.py  0003_edicao_aceitainscricoes_edicao_fotoedicao_and_more.py  0003_remove_edition_edition_photo_remove_edition_file_and_more.py  0003_rename_note_avaliation_grade.py  0004_alter_avaliacao_options.py  0004_category_team_category.py  0004_delete_student.py  0004_images.py  0005_alter_avaliation_grade_alter_ranking_final_grade.py  0005_alter_images_options_and_more.py  0005_rename_apoiadores_apoiador.py  0006_remove_edition_edition_photo_base64_and_more.py  0006_rename_nivelcurso_curso_nivel_curso_and_more.py  0006_team_project_name_alter_avaliation_grade_and_more.py  0007_rename_avaliador_edicao_avaliadoredicao_and_more.py  0007_team_desc.py  0008_edicao_data_fim_edicao_data_inicio_and_more.py  0008_remove_team_desc_team_photo_base64_edition.py  0009_alter_equipe_alunos.py  0009_remove_team_photo_team.py  0010_remove_edicaocriterio_criterio_and_more.py  0010_rename_photo_base64_edition_team_photo_base64_team.py
hackathon/models/: __init__.py  aluno.py  apoiador.py  avaliacao.py  avaliador.py  avaliation.py  avaliator.py  category.py  classInfo.py  class_info.py  classe.py  course.py  (+12 more)
user/: admin.py  filters.py  forms.py  managers.py  models.py  serializers.py  views.py
(+91 files in other folders)
