[project]
name = "fabrica-hackathon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "fabricaDeSoftware", email = "="},
]
dependencies = [
    "django>=5.0.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "python src/manage.py runserver"
createsuperuser = "python src/manage.py createsuperuser"
pre_migrate = "python src/manage.py makemigrations"
migrate = "python src/manage.py migrate"
shell = "python src/manage.py shell"
shellp= "python src/manage.py shell_plus"
test = "python src/manage.py test"
populate = "python src/manage.py populate"
loaddata = "python src/manage.py loaddata core.json"
dumpdata = "python src/manage.py dumpdata --indent 2"

[tool.pdm]
distribution = false
